--- a/MultiPackage/MCResources/exportOptions.plist
+++ b/MultiPackage/MCResources/exportOptions.plist
@@ -2,9 +2,9 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>Channel</key>
-	<string>master</string>
-	<key>balanceUri</key>
-	<string></string>
+	<key>uploadSymbols</key>
+	<string>enterprise</string>
+	<key>teamID</key>
+	<string>ZCG75YJN57</string>
 </dict>
 </plist>
