--- a/PackageCmd/MCResources/official/custom_official.plist
+++ b/PackageCmd/MCResources/official/custom_official.plist
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<!--
-   custom.plist
-   MultiPackage
-
-   Created by nanhujiaju on 2017/6/5.
-   Copyright (c) 2017年 nanhujiaju. All rights reserved.
--->
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-    <dict>
-    
-    </dict>
+<dict>
+	<key>MCCustom</key>
+	<dict>
+		<key>Channel</key>
+		<string>official</string>
+		<key>balanceUri</key>
+		<string>https://github.com/</string>
+	</dict>
+</dict>
 </plist>
